Bug with appearing duplicated data in the test because of oversampling fixed

--- a/tmp.ipynb
+++ b/tmp.ipynb
@@ -10,11 +10,11 @@
      "text": [
       "MLPNet(\n",
       "  (linear_relu_stack): Sequential(\n",
-      "    (0): Linear(in_features=7370, out_features=737, bias=True)\n",
+      "    (0): Linear(in_features=7172, out_features=717, bias=True)\n",
       "    (1): ReLU()\n",
-      "    (2): Linear(in_features=737, out_features=73, bias=True)\n",
+      "    (2): Linear(in_features=717, out_features=71, bias=True)\n",
       "    (3): ReLU()\n",
-      "    (4): Linear(in_features=73, out_features=2, bias=True)\n",
+      "    (4): Linear(in_features=71, out_features=2, bias=True)\n",
       "  )\n",
       ")\n"
      ]
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 7370]) torch.Size([1])\n",
+      "torch.Size([1, 7172]) torch.Size([1])\n",
       "tensor([[0., 0., 0.,  ..., 0., 0., 0.]]) tensor([0])\n"
      ]
     }
@@ -119,134 +119,136 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 0.656216  [    0/ 7445]\n",
-      "loss: 0.658321  [ 1000/ 7445]\n",
-      "loss: 0.649914  [ 2000/ 7445]\n",
-      "loss: 0.646899  [ 3000/ 7445]\n",
-      "loss: 0.648837  [ 4000/ 7445]\n",
-      "loss: 0.759127  [ 5000/ 7445]\n",
-      "loss: 0.729092  [ 6000/ 7445]\n",
-      "loss: 0.730814  [ 7000/ 7445]\n",
+      "loss: 0.713981  [    0/ 7392]\n",
+      "loss: 0.677244  [ 1000/ 7392]\n",
+      "loss: 0.731254  [ 2000/ 7392]\n",
+      "loss: 0.660710  [ 3000/ 7392]\n",
+      "loss: 0.643532  [ 4000/ 7392]\n",
+      "loss: 0.652796  [ 5000/ 7392]\n",
+      "loss: 0.667144  [ 6000/ 7392]\n",
+      "loss: 0.644526  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 52.1%, Avg loss: 0.691794 \n",
+      " Accuracy: 85.7%, Avg loss: 0.665554 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 0.663754  [    0/ 7445]\n",
-      "loss: 0.661707  [ 1000/ 7445]\n",
-      "loss: 0.650484  [ 2000/ 7445]\n",
-      "loss: 0.646793  [ 3000/ 7445]\n",
-      "loss: 0.648759  [ 4000/ 7445]\n",
-      "loss: 0.758124  [ 5000/ 7445]\n",
-      "loss: 0.727356  [ 6000/ 7445]\n",
-      "loss: 0.728802  [ 7000/ 7445]\n",
+      "loss: 0.655800  [    0/ 7392]\n",
+      "loss: 0.645557  [ 1000/ 7392]\n",
+      "loss: 0.748385  [ 2000/ 7392]\n",
+      "loss: 0.650925  [ 3000/ 7392]\n",
+      "loss: 0.636892  [ 4000/ 7392]\n",
+      "loss: 0.649345  [ 5000/ 7392]\n",
+      "loss: 0.665044  [ 6000/ 7392]\n",
+      "loss: 0.642327  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 52.1%, Avg loss: 0.690681 \n",
+      " Accuracy: 85.7%, Avg loss: 0.664228 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 0.663808  [    0/ 7445]\n",
-      "loss: 0.661175  [ 1000/ 7445]\n",
-      "loss: 0.649290  [ 2000/ 7445]\n",
-      "loss: 0.645298  [ 3000/ 7445]\n",
-      "loss: 0.647583  [ 4000/ 7445]\n",
-      "loss: 0.757681  [ 5000/ 7445]\n",
-      "loss: 0.725689  [ 6000/ 7445]\n",
-      "loss: 0.726263  [ 7000/ 7445]\n",
+      "loss: 0.655155  [    0/ 7392]\n",
+      "loss: 0.644227  [ 1000/ 7392]\n",
+      "loss: 0.747045  [ 2000/ 7392]\n",
+      "loss: 0.649771  [ 3000/ 7392]\n",
+      "loss: 0.634784  [ 4000/ 7392]\n",
+      "loss: 0.648424  [ 5000/ 7392]\n",
+      "loss: 0.664511  [ 6000/ 7392]\n",
+      "loss: 0.640118  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 52.1%, Avg loss: 0.688753 \n",
+      " Accuracy: 85.7%, Avg loss: 0.662860 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 0.662838  [    0/ 7445]\n",
-      "loss: 0.660128  [ 1000/ 7445]\n",
-      "loss: 0.646400  [ 2000/ 7445]\n",
-      "loss: 0.643002  [ 3000/ 7445]\n",
-      "loss: 0.645043  [ 4000/ 7445]\n",
-      "loss: 0.756262  [ 5000/ 7445]\n",
-      "loss: 0.722141  [ 6000/ 7445]\n",
-      "loss: 0.721480  [ 7000/ 7445]\n",
+      "loss: 0.655153  [    0/ 7392]\n",
+      "loss: 0.642759  [ 1000/ 7392]\n",
+      "loss: 0.743994  [ 2000/ 7392]\n",
+      "loss: 0.647930  [ 3000/ 7392]\n",
+      "loss: 0.631153  [ 4000/ 7392]\n",
+      "loss: 0.646993  [ 5000/ 7392]\n",
+      "loss: 0.663400  [ 6000/ 7392]\n",
+      "loss: 0.636180  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 52.1%, Avg loss: 0.684967 \n",
+      " Accuracy: 85.7%, Avg loss: 0.660348 \n",
       "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 0.660791  [    0/ 7445]\n",
-      "loss: 0.657040  [ 1000/ 7445]\n",
-      "loss: 0.641086  [ 2000/ 7445]\n",
-      "loss: 0.637846  [ 3000/ 7445]\n",
-      "loss: 0.640167  [ 4000/ 7445]\n",
-      "loss: 0.752989  [ 5000/ 7445]\n",
-      "loss: 0.714420  [ 6000/ 7445]\n",
-      "loss: 0.710730  [ 7000/ 7445]\n",
+      "loss: 0.655663  [    0/ 7392]\n",
+      "loss: 0.639896  [ 1000/ 7392]\n",
+      "loss: 0.737543  [ 2000/ 7392]\n",
+      "loss: 0.644477  [ 3000/ 7392]\n",
+      "loss: 0.623923  [ 4000/ 7392]\n",
+      "loss: 0.644178  [ 5000/ 7392]\n",
+      "loss: 0.660186  [ 6000/ 7392]\n",
+      "loss: 0.627917  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 61.9%, Avg loss: 0.676083 \n",
+      " Accuracy: 86.6%, Avg loss: 0.655100 \n",
       "\n",
       "Epoch 6\n",
       "-------------------------------\n",
-      "loss: 0.655915  [    0/ 7445]\n",
-      "loss: 0.648068  [ 1000/ 7445]\n",
-      "loss: 0.627717  [ 2000/ 7445]\n",
-      "loss: 0.623229  [ 3000/ 7445]\n",
-      "loss: 0.627743  [ 4000/ 7445]\n",
-      "loss: 0.744357  [ 5000/ 7445]\n",
-      "loss: 0.694447  [ 6000/ 7445]\n",
-      "loss: 0.682463  [ 7000/ 7445]\n",
+      "loss: 0.657357  [    0/ 7392]\n",
+      "loss: 0.633728  [ 1000/ 7392]\n",
+      "loss: 0.721150  [ 2000/ 7392]\n",
+      "loss: 0.636153  [ 3000/ 7392]\n",
+      "loss: 0.607427  [ 4000/ 7392]\n",
+      "loss: 0.636092  [ 5000/ 7392]\n",
+      "loss: 0.650067  [ 6000/ 7392]\n",
+      "loss: 0.607031  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 85.4%, Avg loss: 0.650604 \n",
+      " Accuracy: 93.7%, Avg loss: 0.641711 \n",
       "\n",
       "Epoch 7\n",
       "-------------------------------\n",
-      "loss: 0.640942  [    0/ 7445]\n",
-      "loss: 0.620958  [ 1000/ 7445]\n",
-      "loss: 0.592214  [ 2000/ 7445]\n",
-      "loss: 0.580614  [ 3000/ 7445]\n",
-      "loss: 0.592376  [ 4000/ 7445]\n",
-      "loss: 0.703912  [ 5000/ 7445]\n",
-      "loss: 0.628063  [ 6000/ 7445]\n",
-      "loss: 0.571455  [ 7000/ 7445]\n",
+      "loss: 0.661748  [    0/ 7392]\n",
+      "loss: 0.617052  [ 1000/ 7392]\n",
+      "loss: 0.674587  [ 2000/ 7392]\n",
+      "loss: 0.609186  [ 3000/ 7392]\n",
+      "loss: 0.561653  [ 4000/ 7392]\n",
+      "loss: 0.607018  [ 5000/ 7392]\n",
+      "loss: 0.608266  [ 6000/ 7392]\n",
+      "loss: 0.549289  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 92.7%, Avg loss: 0.562998 \n",
+      " Accuracy: 97.0%, Avg loss: 0.600528 \n",
       "\n",
+      "Saved PyTorch Model State to MLPNet.pth\n",
       "Epoch 8\n",
       "-------------------------------\n",
-      "loss: 0.598714  [    0/ 7445]\n",
-      "loss: 0.527386  [ 1000/ 7445]\n",
-      "loss: 0.492674  [ 2000/ 7445]\n",
-      "loss: 0.457084  [ 3000/ 7445]\n",
-      "loss: 0.493086  [ 4000/ 7445]\n",
-      "loss: 0.503600  [ 5000/ 7445]\n",
-      "loss: 0.418169  [ 6000/ 7445]\n",
-      "loss: 0.224951  [ 7000/ 7445]\n",
+      "loss: 0.680220  [    0/ 7392]\n",
+      "loss: 0.554791  [ 1000/ 7392]\n",
+      "loss: 0.515327  [ 2000/ 7392]\n",
+      "loss: 0.497685  [ 3000/ 7392]\n",
+      "loss: 0.422426  [ 4000/ 7392]\n",
+      "loss: 0.475780  [ 5000/ 7392]\n",
+      "loss: 0.438618  [ 6000/ 7392]\n",
+      "loss: 0.383580  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 94.9%, Avg loss: 0.345475 \n",
+      " Accuracy: 96.8%, Avg loss: 0.441552 \n",
       "\n",
+      "Saved PyTorch Model State to MLPNet.pth\n",
       "Epoch 9\n",
       "-------------------------------\n",
-      "loss: 0.461919  [    0/ 7445]\n",
-      "loss: 0.330528  [ 1000/ 7445]\n",
-      "loss: 0.323367  [ 2000/ 7445]\n",
-      "loss: 0.291795  [ 3000/ 7445]\n",
-      "loss: 0.326193  [ 4000/ 7445]\n",
-      "loss: 0.169833  [ 5000/ 7445]\n",
-      "loss: 0.156527  [ 6000/ 7445]\n",
-      "loss: 0.043674  [ 7000/ 7445]\n",
+      "loss: 0.684874  [    0/ 7392]\n",
+      "loss: 0.336802  [ 1000/ 7392]\n",
+      "loss: 0.177323  [ 2000/ 7392]\n",
+      "loss: 0.221625  [ 3000/ 7392]\n",
+      "loss: 0.184319  [ 4000/ 7392]\n",
+      "loss: 0.223098  [ 5000/ 7392]\n",
+      "loss: 0.180520  [ 6000/ 7392]\n",
+      "loss: 0.171110  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 96.0%, Avg loss: 0.189408 \n",
+      " Accuracy: 97.5%, Avg loss: 0.236625 \n",
       "\n",
       "Saved PyTorch Model State to MLPNet.pth\n",
       "Epoch 10\n",
       "-------------------------------\n",
-      "loss: 0.337114  [    0/ 7445]\n",
-      "loss: 0.181328  [ 1000/ 7445]\n",
-      "loss: 0.198863  [ 2000/ 7445]\n",
-      "loss: 0.215039  [ 3000/ 7445]\n",
-      "loss: 0.220162  [ 4000/ 7445]\n",
-      "loss: 0.055737  [ 5000/ 7445]\n",
-      "loss: 0.051591  [ 6000/ 7445]\n",
-      "loss: 0.014044  [ 7000/ 7445]\n",
+      "loss: 0.603354  [    0/ 7392]\n",
+      "loss: 0.120075  [ 1000/ 7392]\n",
+      "loss: 0.031427  [ 2000/ 7392]\n",
+      "loss: 0.076254  [ 3000/ 7392]\n",
+      "loss: 0.065676  [ 4000/ 7392]\n",
+      "loss: 0.091263  [ 5000/ 7392]\n",
+      "loss: 0.069548  [ 6000/ 7392]\n",
+      "loss: 0.079417  [ 7000/ 7392]\n",
       "Test Error: \n",
-      " Accuracy: 97.4%, Avg loss: 0.128315 \n",
+      " Accuracy: 97.5%, Avg loss: 0.148485 \n",
       "\n",
       "Saved PyTorch Model State to MLPNet.pth\n",
       "Done!\n"
@@ -315,23 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0, device='cuda:0') 0.0\n",
-      "tensor(1, device='cuda:0') 0.0\n",
       "tensor(1, device='cuda:0') 1.0\n",
       "tensor(0, device='cuda:0') 0.0\n",
-      "tensor(1, device='cuda:0') 1.0\n"
+      "tensor(0, device='cuda:0') 0.0\n",
+      "tensor(0, device='cuda:0') 0.0\n",
+      "tensor(0, device='cuda:0') 0.0\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
+    "random.seed(40)\n",
     "_, test = preproc_model.get_train_test_preprocd()\n",
     "for i in range(5):\n",
     "    n = random.randint(0, len(test))\n",
@@ -347,29 +350,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0, device='cuda:0')\n",
-      "tensor(0, device='cuda:0')\n",
-      "tensor(0, device='cuda:0')\n",
-      "tensor(0, device='cuda:0')\n",
-      "tensor(0, device='cuda:0')\n"
+      "[0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1] \n",
+      " [0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n",
+      "accuracy: 0.6153846153846154\n",
+      "precision: 0.375\n",
+      "recall: 1.0\n",
+      "f1_score: 0.5454545454545454\n"
      ]
     }
    ],
    "source": [
-    "letter_arr = [\"Hi, how are you feeling? You haven't written for a long time, so I thought something might have happened.\",\n",
-    "              'Only today! buy one king-size pizza, get one cola for free! Hurry up!',\n",
-    "              'love you sweetie! ;)',\n",
-    "              \"hey, do you want to get rich? do you want to afford everything you've been dreaming about for a long time? Buy my book and I'll tell you how to become rich!\",\n",
-    "              'bae i cannot wait anymore. I want you now!']\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "for letter in letter_arr:\n",
-    "    print(net_model(torch.Tensor(preproc_model.preproc_letter(letter)).to(torch.float32).to(device)).argmax())"
+    "spam_dict = {\"Hi, how are you feeling? You haven't written for a long time, so I thought something might have happened.\": 0,\n",
+    "              'Only today! buy one king-size pizza, get one cola for free! Hurry up!': 1,\n",
+    "              'love you sweetie :)': 0,\n",
+    "              \"Buy my book and I'll tell you how to become rich!\": 1,\n",
+    "              'bae i cannot wait anymore. I want you now!': 0,\n",
+    "              'You’ve won a price! our phone number: +7 911 XXX-XX-XX': 1,\n",
+    "              'The IRS is trying to contact you': 1,\n",
+    "              'You have a refund coming': 1,\n",
+    "              'Verify your bank account': 1,\n",
+    "              'You have a package delivery': 0,\n",
+    "              'Verify your Apple iCloud ID': 0,\n",
+    "              'A family member needs help': 1,\n",
+    "              'You have a new billing statement': 1}\n",
+    "\n",
+    "pred_y, real_y = [], list(spam_dict.values())\n",
+    "for letter in spam_dict:\n",
+    "    vectorized_letter = preproc_model.preproc_letter(letter)\n",
+    "    pred_y.append(net_model(torch.Tensor(vectorized_letter[0]).to(torch.float32).to(device)).argmax().item())\n",
+    "\n",
+    "print(pred_y, '\\n', real_y)\n",
+    "print('accuracy:', accuracy_score(pred_y, real_y))\n",
+    "print('precision:', precision_score(pred_y, real_y))\n",
+    "print('recall:', recall_score(pred_y, real_y))\n",
+    "print('f1_score:', f1_score(pred_y, real_y))"
    ],
    "metadata": {
     "collapsed": false,
